--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   visibility_detector: 0.3.3
   google_fonts: ^5.1.0
   go_router: ^10.0.0
+  permission_handler: ^10.4.3
+  camera: ^0.10.5+3
 
 dev_dependencies:
   flutter_test:
