--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,27 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.3.0
-  video_player: 2.4.10
-  visibility_detector: 0.3.3
-  google_fonts: ^5.1.0
+  google_fonts: ^4.0.1
   go_router: ^10.0.0
   permission_handler: ^10.4.3
   camera: ^0.10.5+3
+  flutter_riverpod: ^2.3.7
+  riverpod_annotation: ^2.1.2
+  shared_preferences: ^2.2.0
+  video_player: ^2.7.0
+  visibility_detector: ^0.4.0+2
+  image_picker: ^1.0.2
+  http: ^0.13.1
+  gallery_saver: ^2.3.2
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +63,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  riverpod_generator: ^2.2.6
+  build_runner: ^2.4.6
+  custom_lint: ^0.5.2
+  riverpod_lint: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
