--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   http: ^0.13.1
   gallery_saver: ^2.3.2
   intl: ^0.18.0
+  firebase_core: ^2.15.1
+  firebase_storage: ^11.2.6
+  firebase_auth: ^4.7.3
+  cloud_firestore: ^4.8.5
 
 dev_dependencies:
   flutter_test:
