--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,28 +34,28 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  font_awesome_flutter: ^10.3.0
-  google_fonts: ^4.0.1
-  go_router: ^10.0.0
-  permission_handler: ^10.4.3
-  camera: ^0.10.5+3
-  flutter_riverpod: ^2.3.7
-  riverpod_annotation: ^2.1.2
-  shared_preferences: ^2.2.0
-  video_player: ^2.7.0
-  visibility_detector: ^0.4.0+2
-  image_picker: ^1.0.2
-  http: ^0.13.1
-  gallery_saver: ^2.3.2
-  intl: ^0.18.0
-  firebase_core: ^2.15.1
-  firebase_storage: ^11.2.6
-  firebase_auth: ^4.7.3
-  cloud_firestore: ^4.8.5
+  font_awesome_flutter: 10.3.0
+  video_player: 2.4.10
+  visibility_detector: 0.3.3
+  google_fonts: 4.0.1
+  go_router: 6.0.2
+  camera: ^0.10.3
+  permission_handler: ^10.2.0
+  gallery_saver: 2.3.2
+  image_picker: 0.8.6+1
+  provider: 6.0.5
+  shared_preferences: ^2.0.17
+  flutter_riverpod: ^2.1.3
+  firebase_core: ^2.6.0
+  firebase_auth: ^4.2.7
+  cloud_firestore: ^4.4.1
+  firebase_storage: ^11.0.13
+  cloud_functions: ^4.4.0
 
 dev_dependencies:
   flutter_test:
